--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,7 +12,7 @@
     <ion-list>
 
       <ion-item>
-        <ion-label fixed>{{ 'EMAIL' | translate }}</ion-label>
+        <ion-label fixed>{{ 'USERNAME' | translate }}</ion-label>
         <ion-input type="username" [(ngModel)]="account.username" name="username"></ion-input>
       </ion-item>
 
