add date and time, post item, item list, item page, working on tags

--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -8,6 +8,11 @@
         <ion-icon name="add"></ion-icon>
       </button>
     </ion-buttons>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="openSettings()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
