--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -41,5 +41,9 @@
       </ion-item>
     </ion-list>
   </form>
-
+  <ion-buttons end>
+    <button ion-button icon-only (click)="logout()">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-buttons>
 </ion-content>
