html and css update

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,33 +1,31 @@
-
-
-
 <ion-content class="background">
   <form (submit)="doLogin()">
+
     <ion-grid >
       <ion-row >
         <div class="splash-logo"></div>
       </ion-row>
-      <p text-center>Welcome Back!</p>
+      <p class="text-setting">Welcome Back!</p>
+    </ion-grid>
 
-      <ion-row  >
+    <ion-grid padding>
+      <ion-row align-items-end >
         <ion-col col-2>
-          <div class="icon"></div>
+          <div class="icon-1"></div>
         </ion-col>
         <ion-col col-10>
           <ion-item >
-            <ion-label fixed>{{ 'USERNAME' | translate }}</ion-label>
             <ion-input type="username" [(ngModel)]="account.username" name="username"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
 
-      <ion-row >
+      <ion-row align-items-end>
         <ion-col col-2>
-          <div class="icon"></div>
+          <div class="icon-2"></div>
         </ion-col>
         <ion-col col-10>
           <ion-item>
-            <ion-label fixed>{{ 'PASSWORD' | translate }}</ion-label>
             <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
           </ion-item>
         </ion-col>
@@ -39,7 +37,14 @@
       <div padding>
         <button ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
       </div>
-      <p text-center>Don't have an account?</p>
     </ion-grid>
   </form>
+
+  <div class="my-button">
+    <ion-row >
+      <ion-col   width-100>
+        <button ion-button clear (click)="navSignup()" class="butt">Don't have an account?</button>
+      </ion-col>
+    </ion-row>
+  </div>
 </ion-content>
