--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -29,44 +29,44 @@
 
     <ion-grid padding>
 
-      <ion-row align-items-end>
-        <ion-col col-1 >
-          <div class="icon_app"></div>
+      <ion-row align-items-end padding-left padding-right>
+        <ion-col col-2 >
+          <div class="icon-1"></div>
         </ion-col>
-        <ion-col col-11>
+        <ion-col col-10>
           <ion-item >
-            <ion-input type="username" [(ngModel)]="account.username" name="username"></ion-input>
+            <ion-input type="username" [(ngModel)]="account.username" name="username" placeholder="Username"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
 
-      <ion-row align-items-end>
-        <ion-col col-1>
-          <div class="icon_app"></div>
+      <ion-row align-items-end padding-left padding-right>
+        <ion-col col-2>
+          <div class="icon-2"></div>
         </ion-col>
-        <ion-col col-11>
-          <ion-item>
-            <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
+        <ion-col col-10>
+          <ion-item >
+            <ion-input type="email" [(ngModel)]="account.email" name="email" placeholder="Email"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
 
-      <ion-row align-items-end>
-        <ion-col col-1 >
-          <div class="icon_app"></div>
+      <ion-row align-items-end padding-left padding-right>
+        <ion-col col-2 >
+          <div class="icon-3"></div>
         </ion-col>
-        <ion-col col-11>
+        <ion-col col-10>
           <ion-item>
-            <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
+            <ion-input type="password" [(ngModel)]="account.password" name="password" placeholder="Password"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
+
+      <div padding-top padding-left padding-right>
+        <button ion-button color="primary" block>{{ 'SIGNUP_BUTTON' | translate }}</button>
+      </div>
 
     </ion-grid>
-
-    <div padding>
-      <button ion-button color="primary" block>{{ 'SIGNUP_BUTTON' | translate }}</button>
-    </div>
 
   </form>
 
