--- a/src/pages/found/found.html
+++ b/src/pages/found/found.html
@@ -1,164 +1,179 @@
 <ion-content class="outer-content">
-  <ion-list>
-    <ion-item>
-      <ion-label>Type</ion-label>
-      <ion-select [(ngModel)]="type">
-        <ion-option value="phone">Phone</ion-option>
-        <ion-option value="wallet">Wallet</ion-option>
-      </ion-select>
-    </ion-item>
+  <div>
+    <form *ngIf="form" [formGroup]="form" (ngSubmit)="createItem()">
+      <input type="file" #fileInput style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage($event)" />
+      <div class="profile-image-wrapper" (click)="getPicture()">
+        <div class="profile-image-placeholder" *ngIf="!this.form.controls.profilePic.value">
+          <ion-icon name="add"></ion-icon>
+          <div>
+            Add item
+          </div>
+        </div>
+        <div class="profile-image" [style.backgroundImage]="getProfileImageStyle()" *ngIf="this.form.controls.profilePic.value"></div>
+      </div>
+    </form>
+  </div>
+  <div>
+    <ion-list>
+      <ion-item>
+        <ion-label>Type</ion-label>
+        <ion-select [(ngModel)]="type">
+          <ion-option value="phone">Phone</ion-option>
+          <ion-option value="wallet">Wallet</ion-option>
+        </ion-select>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>Location</ion-label>
-      <ion-select [(ngModel)]="location">
-        <ion-option value="Helsinki">Helsinki</ion-option>
-        <ion-option value="Espoo">Espoo</ion-option>
-      </ion-select>
-    </ion-item>
+      <ion-item>
+        <ion-label>Location</ion-label>
+        <ion-select [(ngModel)]="location">
+          <ion-option value="Helsinki">Helsinki</ion-option>
+          <ion-option value="Espoo">Espoo</ion-option>
+        </ion-select>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>From Date</ion-label>
-      <ion-select (ionChange)="yearChangeFrom($event)">
-        <ion-option selected="true" >1989</ion-option>
-        <ion-option>1990</ion-option>
-        <ion-option>1991</ion-option>
-        <ion-option>1992</ion-option>
-        <ion-option>1993</ion-option>
-        <ion-option>1994</ion-option>
-        <ion-option>1995</ion-option>
-        <ion-option>1996</ion-option>
-        <ion-option>1997</ion-option>
-        <ion-option>1998</ion-option>
-        <ion-option>1999</ion-option>
-        <ion-option>2000</ion-option>
-        <ion-option>2001</ion-option>
-        <ion-option>2002</ion-option>
-        <ion-option>2003</ion-option>
-        <ion-option>2004</ion-option>
-        <ion-option>2005</ion-option>
-        <ion-option>2400</ion-option>
-      </ion-select>
-      <ion-select (ionChange)="monthChangeFrom($event)">
-        <ion-option selected="true" value="01">January</ion-option>
-        <ion-option value="02">February</ion-option>
-        <ion-option value="03" >March</ion-option>
-        <ion-option value="04">April</ion-option>
-        <ion-option value="05">May</ion-option>
-        <ion-option value="06">June</ion-option>
-        <ion-option value="07">July</ion-option>
-        <ion-option value="08">August</ion-option>
-        <ion-option value="09">September</ion-option>
-        <ion-option value="10">October</ion-option>
-        <ion-option value="11">November</ion-option>
-        <ion-option value="12">December</ion-option>
-      </ion-select>
-      <ion-select (ionChange)="dayChangeFrom($event)">
-        <ion-option selected="true" value="01">01</ion-option>
-        <ion-option value="02">02</ion-option>
-        <ion-option value="03">03</ion-option>
-        <ion-option value="04">04</ion-option>
-        <ion-option value="05">05</ion-option>
-        <ion-option value="06">06</ion-option>
-        <ion-option value="07">07</ion-option>
-        <ion-option value="08">08</ion-option>
-        <ion-option value="09">09</ion-option>
-        <ion-option value="10">10</ion-option>
-        <ion-option value="11">11</ion-option>
-        <ion-option value="12">12</ion-option>
-        <ion-option value="13">13</ion-option>
-        <ion-option value="14">14</ion-option>
-        <ion-option value="15">15</ion-option>
-        <ion-option value="16">16</ion-option>
-        <ion-option value="17">17</ion-option>
-        <ion-option value="18">18</ion-option>
-        <ion-option value="19">19</ion-option>
-        <ion-option value="20">20</ion-option>
-        <ion-option value="21">21</ion-option>
-        <ion-option value="22">22</ion-option>
-        <ion-option value="23">23</ion-option>
-        <ion-option value="24">24</ion-option>
-        <ion-option value="25">25</ion-option>
-        <ion-option value="26">26</ion-option>
-        <ion-option value="27">27</ion-option>
-        <ion-option value="28">28</ion-option>
-        <ion-option value="29" [disabled]="check29()">29</ion-option>
-        <ion-option value="30" [disabled]="checkFeb">30</ion-option>
-        <ion-option value="31" [disabled]="check30+checkFeb">31</ion-option>
-      </ion-select>
-    </ion-item>
+      <ion-item>
+        <ion-label>From Date</ion-label>
+        <ion-select (ionChange)="yearChangeFrom($event)">
+          <ion-option selected="true" >1989</ion-option>
+          <ion-option>1990</ion-option>
+          <ion-option>1991</ion-option>
+          <ion-option>1992</ion-option>
+          <ion-option>1993</ion-option>
+          <ion-option>1994</ion-option>
+          <ion-option>1995</ion-option>
+          <ion-option>1996</ion-option>
+          <ion-option>1997</ion-option>
+          <ion-option>1998</ion-option>
+          <ion-option>1999</ion-option>
+          <ion-option>2000</ion-option>
+          <ion-option>2001</ion-option>
+          <ion-option>2002</ion-option>
+          <ion-option>2003</ion-option>
+          <ion-option>2004</ion-option>
+          <ion-option>2005</ion-option>
+          <ion-option>2400</ion-option>
+        </ion-select>
+        <ion-select (ionChange)="monthChangeFrom($event)">
+          <ion-option selected="true" value="01">January</ion-option>
+          <ion-option value="02">February</ion-option>
+          <ion-option value="03" >March</ion-option>
+          <ion-option value="04">April</ion-option>
+          <ion-option value="05">May</ion-option>
+          <ion-option value="06">June</ion-option>
+          <ion-option value="07">July</ion-option>
+          <ion-option value="08">August</ion-option>
+          <ion-option value="09">September</ion-option>
+          <ion-option value="10">October</ion-option>
+          <ion-option value="11">November</ion-option>
+          <ion-option value="12">December</ion-option>
+        </ion-select>
+        <ion-select (ionChange)="dayChangeFrom($event)">
+          <ion-option selected="true" value="01">01</ion-option>
+          <ion-option value="02">02</ion-option>
+          <ion-option value="03">03</ion-option>
+          <ion-option value="04">04</ion-option>
+          <ion-option value="05">05</ion-option>
+          <ion-option value="06">06</ion-option>
+          <ion-option value="07">07</ion-option>
+          <ion-option value="08">08</ion-option>
+          <ion-option value="09">09</ion-option>
+          <ion-option value="10">10</ion-option>
+          <ion-option value="11">11</ion-option>
+          <ion-option value="12">12</ion-option>
+          <ion-option value="13">13</ion-option>
+          <ion-option value="14">14</ion-option>
+          <ion-option value="15">15</ion-option>
+          <ion-option value="16">16</ion-option>
+          <ion-option value="17">17</ion-option>
+          <ion-option value="18">18</ion-option>
+          <ion-option value="19">19</ion-option>
+          <ion-option value="20">20</ion-option>
+          <ion-option value="21">21</ion-option>
+          <ion-option value="22">22</ion-option>
+          <ion-option value="23">23</ion-option>
+          <ion-option value="24">24</ion-option>
+          <ion-option value="25">25</ion-option>
+          <ion-option value="26">26</ion-option>
+          <ion-option value="27">27</ion-option>
+          <ion-option value="28">28</ion-option>
+          <ion-option value="29" [disabled]="check29()">29</ion-option>
+          <ion-option value="30" [disabled]="checkFeb">30</ion-option>
+          <ion-option value="31" [disabled]="check30+checkFeb">31</ion-option>
+        </ion-select>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>To Date</ion-label>
-      <ion-select (ionChange)="yearChangeTo($event)">
-        <ion-option selected="true" >1989</ion-option>
-        <ion-option>1990</ion-option>
-        <ion-option>1991</ion-option>
-        <ion-option>1992</ion-option>
-        <ion-option>1993</ion-option>
-        <ion-option>1994</ion-option>
-        <ion-option>1995</ion-option>
-        <ion-option>1996</ion-option>
-        <ion-option>1997</ion-option>
-        <ion-option>1998</ion-option>
-        <ion-option>1999</ion-option>
-        <ion-option>2000</ion-option>
-        <ion-option>2001</ion-option>
-        <ion-option>2002</ion-option>
-        <ion-option>2003</ion-option>
-        <ion-option>2004</ion-option>
-        <ion-option>2005</ion-option>
-        <ion-option>2400</ion-option>
-      </ion-select>
-      <ion-select (ionChange)="monthChangeTo($event)">
-        <ion-option selected="true" value="01">January</ion-option>
-        <ion-option value="02">February</ion-option>
-        <ion-option value="03" >March</ion-option>
-        <ion-option value="04">April</ion-option>
-        <ion-option value="05">May</ion-option>
-        <ion-option value="06">June</ion-option>
-        <ion-option value="07">July</ion-option>
-        <ion-option value="08">August</ion-option>
-        <ion-option value="09">September</ion-option>
-        <ion-option value="10">October</ion-option>
-        <ion-option value="11">November</ion-option>
-        <ion-option value="12">December</ion-option>
-      </ion-select>
-      <ion-select (ionChange)="dayChangeTo($event)">
-        <ion-option selected="true" value="01">01</ion-option>
-        <ion-option value="02">02</ion-option>
-        <ion-option value="03">03</ion-option>
-        <ion-option value="04">04</ion-option>
-        <ion-option value="05">05</ion-option>
-        <ion-option value="06">06</ion-option>
-        <ion-option value="07">07</ion-option>
-        <ion-option value="08">08</ion-option>
-        <ion-option value="09">09</ion-option>
-        <ion-option value="10">10</ion-option>
-        <ion-option value="11">11</ion-option>
-        <ion-option value="12">12</ion-option>
-        <ion-option value="13">13</ion-option>
-        <ion-option value="14">14</ion-option>
-        <ion-option value="15">15</ion-option>
-        <ion-option value="16">16</ion-option>
-        <ion-option value="17">17</ion-option>
-        <ion-option value="18">18</ion-option>
-        <ion-option value="19">19</ion-option>
-        <ion-option value="20">20</ion-option>
-        <ion-option value="21">21</ion-option>
-        <ion-option value="22">22</ion-option>
-        <ion-option value="23">23</ion-option>
-        <ion-option value="24">24</ion-option>
-        <ion-option value="25">25</ion-option>
-        <ion-option value="26">26</ion-option>
-        <ion-option value="27">27</ion-option>
-        <ion-option value="28">28</ion-option>
-        <ion-option value="29" [disabled]="check29()">29</ion-option>
-        <ion-option value="30" [disabled]="checkFeb">30</ion-option>
-        <ion-option value="31" [disabled]="check30+checkFeb">31</ion-option>
-      </ion-select>
-    </ion-item>
-
-  </ion-list>
+      <ion-item>
+        <ion-label>To Date</ion-label>
+        <ion-select (ionChange)="yearChangeTo($event)">
+          <ion-option selected="true" >1989</ion-option>
+          <ion-option>1990</ion-option>
+          <ion-option>1991</ion-option>
+          <ion-option>1992</ion-option>
+          <ion-option>1993</ion-option>
+          <ion-option>1994</ion-option>
+          <ion-option>1995</ion-option>
+          <ion-option>1996</ion-option>
+          <ion-option>1997</ion-option>
+          <ion-option>1998</ion-option>
+          <ion-option>1999</ion-option>
+          <ion-option>2000</ion-option>
+          <ion-option>2001</ion-option>
+          <ion-option>2002</ion-option>
+          <ion-option>2003</ion-option>
+          <ion-option>2004</ion-option>
+          <ion-option>2005</ion-option>
+          <ion-option>2400</ion-option>
+        </ion-select>
+        <ion-select (ionChange)="monthChangeTo($event)">
+          <ion-option selected="true" value="01">January</ion-option>
+          <ion-option value="02">February</ion-option>
+          <ion-option value="03" >March</ion-option>
+          <ion-option value="04">April</ion-option>
+          <ion-option value="05">May</ion-option>
+          <ion-option value="06">June</ion-option>
+          <ion-option value="07">July</ion-option>
+          <ion-option value="08">August</ion-option>
+          <ion-option value="09">September</ion-option>
+          <ion-option value="10">October</ion-option>
+          <ion-option value="11">November</ion-option>
+          <ion-option value="12">December</ion-option>
+        </ion-select>
+        <ion-select (ionChange)="dayChangeTo($event)">
+          <ion-option selected="true" value="01">01</ion-option>
+          <ion-option value="02">02</ion-option>
+          <ion-option value="03">03</ion-option>
+          <ion-option value="04">04</ion-option>
+          <ion-option value="05">05</ion-option>
+          <ion-option value="06">06</ion-option>
+          <ion-option value="07">07</ion-option>
+          <ion-option value="08">08</ion-option>
+          <ion-option value="09">09</ion-option>
+          <ion-option value="10">10</ion-option>
+          <ion-option value="11">11</ion-option>
+          <ion-option value="12">12</ion-option>
+          <ion-option value="13">13</ion-option>
+          <ion-option value="14">14</ion-option>
+          <ion-option value="15">15</ion-option>
+          <ion-option value="16">16</ion-option>
+          <ion-option value="17">17</ion-option>
+          <ion-option value="18">18</ion-option>
+          <ion-option value="19">19</ion-option>
+          <ion-option value="20">20</ion-option>
+          <ion-option value="21">21</ion-option>
+          <ion-option value="22">22</ion-option>
+          <ion-option value="23">23</ion-option>
+          <ion-option value="24">24</ion-option>
+          <ion-option value="25">25</ion-option>
+          <ion-option value="26">26</ion-option>
+          <ion-option value="27">27</ion-option>
+          <ion-option value="28">28</ion-option>
+          <ion-option value="29" [disabled]="check29()">29</ion-option>
+          <ion-option value="30" [disabled]="checkFeb">30</ion-option>
+          <ion-option value="31" [disabled]="check30+checkFeb">31</ion-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
+  </div>
   <div class="my-button">
     <ion-row >
       <ion-col align-self-center   width-50>
