testing fb login

--- a/src/pages/found/found.html
+++ b/src/pages/found/found.html
@@ -6,6 +6,17 @@
         <ion-select [(ngModel)]="type">
           <ion-option value="phone">Phone</ion-option>
           <ion-option value="wallet">Wallet</ion-option>
+          <ion-option value="vehicles">Vehicles</ion-option>
+          <ion-option value="VehiclesPartandAccessories">Vehicles Part and Accessories</ion-option>
+          <ion-option value="VehiclesEquipment">Vehicles Equipment</ion-option>
+          <ion-option value="DomesticAppliances">Domestic Appliances</ion-option>
+          <ion-option value="DecorationandFurniture">Decoration and Furniture</ion-option>
+          <ion-option value="ClothesandShoes">Clothes and Shoes</ion-option>
+          <ion-option value="AccessoriesandWatches">Accessories and Watches</ion-option>
+          <ion-option value="BuildindMaterialandTools">Buildind Material and Tools</ion-option>
+          <ion-option value="PhonesandAccessories">Phones and Accessories</ion-option>
+          <ion-option value="ComputerandAccessories">Consumer Electronic</ion-option>
+          <ion-option value="ComputerandAccessories">Computer and Accessories</ion-option>
         </ion-select>
       </ion-item>
 
@@ -14,6 +25,25 @@
         <ion-select [(ngModel)]="location">
           <ion-option value="Helsinki">Helsinki</ion-option>
           <ion-option value="Espoo">Espoo</ion-option>
+          <ion-option value="Turku">Turku</ion-option>
+          <ion-option value="Tampere">Tampere</ion-option>
+          <ion-option value="Oulu">Oulu</ion-option>
+          <ion-option value="Vantaa">Vantaa</ion-option>
+          <ion-option value="Rovaniemi">Rovaniemi</ion-option>
+          <ion-option value="Jyväskylä">Jyväskylä</ion-option>
+          <ion-option value="Joensuu">Joensuu</ion-option>
+          <ion-option value="Vaasa">Vaasa</ion-option>
+          <ion-option value="Porvoo">Porvoo</ion-option>
+          <ion-option value="Kuopio">Kuopio</ion-option>
+          <ion-option value="Kemi">Kemi</ion-option>
+          <ion-option value="Pori">Pori</ion-option>
+          <ion-option value="Lahti">Lahti</ion-option>
+          <ion-option value="Mikkeli">Mikkeli</ion-option>
+          <ion-option value="Rauma">Rauma</ion-option>
+          <ion-option value="Pirkkala">Pirkkala</ion-option>
+          <ion-option value="Salo">Salo</ion-option>
+          <ion-option value="Kotka">Kotka</ion-option>
+          <ion-option value="Kouvola">Kouvola</ion-option>
         </ion-select>
       </ion-item>
 
@@ -37,7 +67,19 @@
           <ion-option>2003</ion-option>
           <ion-option>2004</ion-option>
           <ion-option>2005</ion-option>
-          <ion-option>2400</ion-option>
+          <ion-option>2006</ion-option>
+          <ion-option>2007</ion-option>
+          <ion-option>2008</ion-option>
+          <ion-option>2009</ion-option>
+          <ion-option>2010</ion-option>
+          <ion-option>2011</ion-option>
+          <ion-option>2012</ion-option>
+          <ion-option>2013</ion-option>
+          <ion-option>2014</ion-option>
+          <ion-option>2015</ion-option>
+          <ion-option>2016</ion-option>
+          <ion-option>2017</ion-option>
+          <ion-option>2018</ion-option>
         </ion-select>
         <ion-select (ionChange)="monthChangeFrom($event)">
           <ion-option selected="true" value="01">January</ion-option>
@@ -108,7 +150,19 @@
           <ion-option>2003</ion-option>
           <ion-option>2004</ion-option>
           <ion-option>2005</ion-option>
-          <ion-option>2400</ion-option>
+          <ion-option>2006</ion-option>
+          <ion-option>2007</ion-option>
+          <ion-option>2008</ion-option>
+          <ion-option>2009</ion-option>
+          <ion-option>2010</ion-option>
+          <ion-option>2011</ion-option>
+          <ion-option>2012</ion-option>
+          <ion-option>2013</ion-option>
+          <ion-option>2014</ion-option>
+          <ion-option>2015</ion-option>
+          <ion-option>2016</ion-option>
+          <ion-option>2017</ion-option>
+          <ion-option>2018</ion-option>
         </ion-select>
         <ion-select (ionChange)="monthChangeTo($event)">
           <ion-option selected="true" value="01">January</ion-option>
