--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -11,20 +11,18 @@
     <!--<button ion-button block (click)="login()" class="login">{{ 'LOGIN' | translate }}</button>-->
   <!--</div>-->
 <!--</ion-content>-->
-<link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Mina|Pacifico" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Lobster|Pacifico|Satisfy" rel="stylesheet">
 <ion-content scroll="false">
-  <div class="slogan">
-        Lost N Found
-  </div>
+  <div class="slogan-icon"></div>
   <div id="slideshow">
     <div id="slide-wrapper">
-      <!--<img class="slide" src="../../assets/img/welcome/1.jpg">-->
-      <!--<img class="slide" src="../../assets/img/welcome/2.jpg">-->
-      <img class="slide" src="../../assets/img/welcome/3.jpg">
-      <img class="slide" src="../../assets/img/welcome/4.jpg">
-      <img class="slide" src="../../assets/img/welcome/5.jpg">
-      <img class="slide" src="../../assets/img/welcome/6.jpg">
-      <img class="slide" src="../../assets/img/welcome/7.jpg">
+      <img class="slide" src="assets/img/welcome/8.jpg">
+      <img class="slide" src="assets/img/welcome/9.jpg">
+      <img class="slide" src="assets/img/welcome/10.jpg">
+      <img class="slide" src="assets/img/welcome/11.jpg">
+      <img class="slide" src="assets/img/welcome/12.jpg">
+      <img class="slide" src="assets/img/welcome/13.jpg">
+      <img class="slide" src="assets/img/welcome/15.jpg">
     </div>
   </div>
   <div class="my-button">
