fix duplicate item on list page

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -12,8 +12,8 @@
   <!--</div>-->
 <!--</ion-content>-->
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Lobster|Pacifico|Satisfy" rel="stylesheet">
-<ion-content >
-  <div class="slogan-icon no-bounce"></div>
+<ion-content no-bounce >
+  <div class="slogan-icon"></div>
     <div id="slideshow">
       <div id="slide-wrapper">
       <img class="slide" src="assets/img/welcome/8.jpg">
