fix various minor bug

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -8,7 +8,6 @@
 
 
 <ion-content>
-
   <ion-card *ngFor="let item of carditem">
 
     <ion-item>
@@ -23,6 +22,8 @@
 
     <ion-card-content>
       <p>{{item.content}}</p>
+      <p>{{item.location}}</p>
+      <p>{{item.type}}</p>
     </ion-card-content>
 
     <ion-row>
