fix card data no sleeping for 3 days in a row im a herogit add .!

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -24,21 +24,11 @@
       <p>{{item.content}}</p>
       <p>{{item.location}}</p>
       <p>{{item.type}}</p>
+      <p>Date From: {{item.datefrom}}</p>
+      <p>Date To: {{item.dateto}}</p>
+      <ion-avatar>
+        <img [src]="item.src">
+      </ion-avatar>
     </ion-card-content>
-
-    <ion-row>
-      <ion-col>
-        <button ion-button color="primary" clear small icon-start>
-            <ion-icon name='thumbs-up'></ion-icon>
-            12 Likes
-          </button>
-      </ion-col>
-      <ion-col>
-        <button ion-button color="primary" clear small icon-start>
-            <ion-icon name='text'></ion-icon>
-            4 Comments
-          </button>
-      </ion-col>
-    </ion-row>
   </ion-card>
 </ion-content>
