--- a/src/pages/market/market.html
+++ b/src/pages/market/market.html
@@ -15,7 +15,7 @@
         <img [src]="item.avatar">
       </ion-avatar>
       <h2>{{item.name}}</h2>
-      <p>{{item.date }}</p>
+      <p>{{item.datefrom}}</p>
     </ion-item>
 
     <img [src]="item.image">
