--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -52,6 +52,17 @@
       </ion-row>
 
       <ion-row align-items-end padding-left padding-right>
+        <ion-col col-2>
+          <div class="icon-2"></div>
+        </ion-col>
+        <ion-col col-10>
+          <ion-item >
+            <ion-input type="phone" [(ngModel)]="phone" name="phone" placeholder="Phone"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row align-items-end padding-left padding-right>
         <ion-col col-2 >
           <div class="icon-3"></div>
         </ion-col>
